# MegaDeepagents

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  langgraph.json  pyproject.toml  requirements.txt
app/: cli.py  llm_factory.py  main.py  permissions.py
docs/: Agent_Team_Parity_Audit.md  Draft_PR_Agent_Team_Runtime_V2.md  MegaDeepagents_Agent_Teams_改造任务书.md  MegaDeepagents_Codex_AgentTeam_二次深度审查与修复提示词.md  MegaDeepagents_改造进度总结.md  agent-team-baseline-audit.md  deepagents_framework_evaluation.md  deepagents_hermes_curator_evolution_trae_task_plan.md  deepagents_upgrade_prompt.md  multiagent_api.md  multiagent_architecture.md  multiagent_examples.md  multiagent_review_report.md  observability.md  phase_two_delivery.md  reviewUpdate.md  test_prompt.md  updatePlan.md  upgradePhaseOne.md  upgradePhaseThree.md  upgradePhaseTwo.md
scripts/: clear_conversations.py  clear_history.py  loop_gate.py  verify.sh
tests/: conftest.py  test_actions.py  test_agent_profile.py  test_agent_team_runtime_v2.py  test_artifact.py  test_b_features.py  test_complexity_router.py  test_config.py  test_executor.py  test_mailbox.py  test_multiagent_action_guard.py  test_multiagent_cancel.py  test_multiagent_complex_task.py  test_multiagent_conflict_resolver.py  test_multiagent_hitl_api.py  test_multiagent_inbox.py  test_multiagent_layered_memory.py  test_multiagent_message_bus.py  test_multiagent_policies.py  test_multiagent_review_repair.py  test_multiagent_review_repair_integration.py  test_multiagent_round_executor.py  test_multiagent_routing_policy.py  test_multiagent_speaker_selector.py  test_multiagent_state.py  test_multiagent_team_graph.py  test_multiagent_team_graph_checkpoint.py  test_multiagent_team_runner.py  test_multiagent_termination.py  test_observability.py  test_orchestrator.py  test_orchestrator_graph.py  test_parallel_scheduler.py  test_permissions.py  test_phase_g_polish.py  test_planner.py  (+15 more)
(+121 files in other folders)
