# Copyright (c) 2026 Made By Nicholas-Xiong
# Licensed under the MIT License.
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general-agent-framework"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "deepagents==0.6.8",
  "langchain==1.3.4",
  "langchain-openai==1.2.2",
  "langchain-deepseek==1.1.0",
  "langgraph==1.2.4",
  "fastapi==0.136.3",
  "uvicorn==0.48.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "python-dotenv==1.2.2",
  "typer==0.26.7",
  "rich==15.0.0",
  "aiosqlite==0.22.1",
  "jinja2==3.1.6",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.example", "*.html", "*.js", "*.css"]
